--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 body {
   background: url(../public/background.jpg);
   background-size: cover;
